amendments to the website with new logo, about us

--- a/hojiak/theblog/templates/base.html
+++ b/hojiak/theblog/templates/base.html
@@ -21,11 +21,11 @@
   <body>
     <div class="site-branding">
       <div class="site-branding-logo">
-        <img src="https://drive.google.com/thumbnail?id=1PXedvuL8aFpT4IN3KcWZsezGFW-8pbBJ" width="240" height="240"></img>
+        <img src="/media/images/Logo - Secondary.png" width="450" height="250"></img>
       </div>
     </div>
     <div class="site-branding-text">
-      <h5 id="site-title"><strong>Potluck. Welcome to our blog!</strong></h5>
+      
     </div>
     
     <nav class="navbar navbar-expand-lg navbar-dark bg-warning">
@@ -35,7 +35,6 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-
 
   <!-- Category Menu Code -->
   {% if cat_menu %}
