--- a/hojiak/theblog/templates/homeview.html
+++ b/hojiak/theblog/templates/homeview.html
@@ -3,7 +3,7 @@
 {% block content %}
 {% load static %}
 
-<h1> Posts </h1>
+<h1> Welcome to our blog! </h1>
 <hr>
 <ul>
 {% for post in object_list %}
