--- a/hojiak/website/templates/aboutus.html
+++ b/hojiak/website/templates/aboutus.html
@@ -19,12 +19,10 @@
   <body>
   <div class="site-branding">
       <div class="site-branding-logo">
-        <img src="https://drive.google.com/thumbnail?id=1PXedvuL8aFpT4IN3KcWZsezGFW-8pbBJ" width="240" height="240"></img>
+        <img src="/media/images/Logo - Secondary.png" width="450" height="250"></img>
       </div>
     </div>
-    <div class="site-branding-text">
-      <h5 id="site-title"><strong>About the Hojiak gang...</strong></h5>
-    </div>
+    
     
 
 <!-- Nav Bar -->
@@ -48,48 +46,64 @@
     </ul>
   </div>
 </nav>
-<br/>
+
+<!-- Jumbotron -->
+    <div class="card card-image" style="background-image: url(https://images.unsplash.com/photo-1528076225979-12893c7d55e4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2099&q=80">
+      <div class="text-white text-center rgba-stylish-strong py-5 px-4">
+        <div class="py-5">
+
+          <!-- Content -->
+          <h3><strong> About the Hojiak Gang... </strong></h3>
+          
+    
+
+        </div>
+      </div>
+    </div>
+    <br/>
+    <!-- Jumbotron -->
 
 <!-- Card -->
 <div class="card-deck" style="max-width: 100%">
   <div class="card">
-    <img src="https://images.unsplash.com/photo-1589748239338-afe695e833d3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1226&q=80" class="card-img-top" alt="Boss">
+    <img src="\media\images\Suz.jpg" class="card-img-top" alt="Boss">
     <div class="card-body">
-      <h5 class="card-title"><strong>Hojiak Cheerleader</strong></h5>
-      <p class="card-text" style="text-align: left">As a foodie and tech enthusiast, Suz wishes to contribute to the local food scene by bringing it even closer to people through technology.
-      <p class="card-text" style="text-align: left"> Suz refuels her cheerleading spirit by eating her favourite satay beehoon and black carrot cake. If she is not cheering the team on, you find her herding cats.</p>
+      <h4 class="card-title"> <strong>Suzanne</strong></h4>
+      <p class="card-text" style="text-align: left"> <strong> Cheerleader </strong></p>
+      <p class="card-text" style="text-align: left"> Suz wishes to contribute to the local food scene by bringing it even closer to people through technology. She refuels her cheerleading spirit by eating her favourite satay beehoon and black carrot cake.</p>
+
     </div>
   </div>
   <div class="card">
-    <img src="https://images.unsplash.com/photo-1502919280275-1bed9aca68ab?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" class="card-img-top" alt="Pixie Fairy">
+    <img src="/media/images/Gen.jpg" class="card-img-top" alt="Pixie Fairy">
     <div class="card-body">
-      <h5 class="card-title"><strong>Hojiak Creative Pixie</strong></h5>
-      <p class="card-text" style="text-align: left">Genevieve has been actively volunteering at community events, a hospital and non-profit organisations. She believes in doing a small part in making the community a little better.</p>
-      <p class="card-text" style="text-align: left">Marketing, branding and a dash of sparkle is what she brings to the Hojiak table.</p>
+      <h4 class="card-title"> <strong>Genevieve</strong></h4>
+      <p class="card-text" style="text-align: left"> <strong> Creative Pixie </strong></p>
+      <p class="card-text" style="text-align: left">Genevieve believes in doing a small part in making the community better. And what better way than through food? Marketing, branding and a dash of sparkle is what she brings to the table.</p>    
     </div>
   </div>
   <div class="card">
-    <img src="https://images.unsplash.com/photo-1505925456693-124134d66749?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" class="card-img-top" alt="Spiderman">
+    <img src="/media/images/SJ.jpg" class="card-img-top" alt="Spiderman">
     <div class="card-body">
-      <h5 class="card-title"><strong>Hojiak Spiderman</strong></h5>
-      <p class="card-text" style="text-align: left">Song Jian is a self proclaimed "Foodie KayPoh", believing in quality over appearance of food. Sometimes you can catch him interacting with the hawkers and chefs, mostly to unlock the secrets to making good food. </p>
-      <p class="card-text" style="text-align: left">As Hojiak Spiderman, he is well connected and links the team up with relevant people to work with. </p>
+      <h4 class="card-title"> <strong>Song Jian</strong></h4>
+      <p class="card-text" style="text-align: left"> <strong> Network Spiderman </strong></p>
+      <p class="card-text" style="text-align: left">Song Jian has the best lobangs for good hawker fare. He also enjoys connecting and networking with people. Join him on the hojiak journey to discover untold hawker stories! </p>
     </div>
   </div>
   <div class="card">
-    <img src="https://images.unsplash.com/photo-1553286158-5f5dac259bb0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" class="card-img-top" alt="Warrior">
+    <img src="/media/images/SY.jpg" class="card-img-top" alt="Warrior">
     <div class="card-body">
-      <h5 class="card-title"> <strong>Hojiak Warrior</strong></h5>
-      <p class="card-text" style="text-align: left">As the Hojiak warrior, Shun Yuan fights for the livelihood and culture of Singapore hawkers. She researches on the history and current evolution of hawkers, aiming to reinvent the notion of hawkerpreneurship for the future. </p>
-      <p class="card-text" style="text-align: left">Her favourite hawker food is chicken rice (without chicken) because she loves the taste of the rice more than anything else.</p>
+      <h4 class="card-title"> <strong>Shun Yuan</strong></h4>
+      <p class="card-text" style="text-align: left"> <strong> Research Warrior </strong></p>
+      <p class="card-text" style="text-align: left">Shun Yuan researches on the history and current evolution of hawkers to reinvent the notion of hawkerpreneurship for the future. Her favourite hawker food is chicken rice (without chicken). And it's not because she is vegan. </p>
     </div>
   </div>
   <div class="card">
-    <img src="https://images.unsplash.com/photo-1518740028517-36c686a4a001?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=700&q=80" class="card-img-top" alt="Tech ninja">
+    <img src="/media/images/Kev.jpg" class="card-img-top" alt="Tech ninja">
     <div class="card-body">
-      <h5 class="card-title"><strong>Hojiak Tech Ninja</strong></h5>
-      <p class="card-text" style="text-align: left">Kevin is a newbie tech enthusiast who is looking to transition into the tech industry. </p>
-      <p class="card-text" style="text-align: left">As tech ninja, he helps to develop the Hojiak website. He enjoys a warm cup of kopi-c-kosong in his free time.</p>
+      <h4 class="card-title"> <strong>Kevin</strong></h4>
+      <p class="card-text" style="text-align: left"> <strong> Tech Ninja </strong></p>
+      <As class="card-text" style="text-align: left">Kevin is a newbie tech enthusiast who is looking to transition into the tech industry. As tech ninja, he helps to develop the Hojiak website. He enjoys a warm cup of kopi-c-kosong in his free time.</p>
     </div>
 </div>
 
