--- a/hojiak/website/templates/home.html
+++ b/hojiak/website/templates/home.html
@@ -19,14 +19,12 @@
   <body>
 
 <!-- Logo and site header/title -->
-  <div class="site-branding">
+<div class="site-branding">
   <div class="site-branding-logo">
-    <img src="media\images\Hojiak_Color.png" width=240 height=240>
+    <img src="\media\images\Logo - Secondary.png" width=450 height=250>
   </div>
 </div>
-<div class="site-branding-text">
-<h5 id="site-title"><strong>Local fare at your fingertips!</strong></h5>
-</div>
+
     
 
 <!-- Nav Bar -->
