--- a/hojiak/members/templates/registration/edit_profile.html
+++ b/hojiak/members/templates/registration/edit_profile.html
@@ -3,7 +3,7 @@
 {% block content %}
 {% load static %}
 
-<h1> Edit Profile... </h1>
+<h1> Edit User Settings... </h1>
 <br/><br/>
 
 <div class="form-group">
