--- a/hojiak/theblog/templates/article_details.html
+++ b/hojiak/theblog/templates/article_details.html
@@ -45,7 +45,24 @@
 </form>
 
 <br/><br/>
+<h2> Comments ... </h2>
+<hr>
 
+{% if not post.comments.all %}
+  No Comments Yet.... <a href = "#"> Add One </a>
+
+{% else %}
+    {% for comment in post.comments.all %}
+      <strong>
+      {{ comment.name }} - 
+      {{ comment.date_added }}
+      </strong>
+      <br/>
+      {{ comment.body }}
+      <br/><br/>
+    {% endfor %}
+{% endif %}
+<br/> <br/>
 <div class="card mb-3">
   <div class="row no-gutters">
     <div class="col-md-2">
@@ -60,8 +77,9 @@
         {{ post.author.last_name }}
         </h5>
         <p class="small text-muted">
+        <a href="{% url 'show_profile_page' post.author.profile.id %}">Profile Page </a>
         {% if post.author.profile.instagram_url %}
-           <a href="{{ post.author.profile.instagram_url }}"> Instagram </a>
+           <a href="{{ post.author.profile.instagram_url }}"> | Instagram </a>
         {% endif %}
         </p>
         <p class="small text-muted">
