--- a/hojiak/website/templates/aboutus.html
+++ b/hojiak/website/templates/aboutus.html
@@ -37,7 +37,7 @@
         <a class="nav-link" href="{% url 'home' %}">Home<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Directory</a>
+        <a class="nav-link" href="#">Food Directory</a>
       </li>
        <li class="nav-item active">
         <a class="nav-link" href="{% url 'homeview'%}">Potluck</a>
