--- a/hojiak/members/templates/registration/login.html
+++ b/hojiak/members/templates/registration/login.html
@@ -9,7 +9,19 @@
 <div class="form-group">
     <form method="POST">
         {% csrf_token %}
-        {{ form.as_p }}
-        <button class="btn btn-outline-secondary"> Login </button>
+        <form>
+        <div class="form-group">
+            <input type="text" class="form-control" style="width: 300px;" name="username" placeholder="Username">     
+        </div>
+
+        <div class="form-group">
+            <input type="password" class="form-control" style="width: 300px;" name="password" placeholder="Password">
+        </div>
+        <br/>
+            <button class="btn btn-outline-secondary"> Login </button>
 </div>
+
+<br/>
+Not Registered? Sign up <a href= "{% url 'register' %}"> here...</a>
+
 {% endblock %}
